--- a/index.html
+++ b/index.html
@@ -73,14 +73,17 @@
             <div class="content">
                     <h2>Community Pharmacy!</h2>
                     <h4>Ralph Prescriptions Pharmacy is one of the finest established pharmacies we have in New York. 
-                        We have years experience in Treating Patients and while we may have grown in size, we still provide the same Intimate, Personal, and Excellent Service we did back then.
+                        We have years experience in Treating Patients and while we may have grown in size, we still provide Excellent Service we did back then.
                         <br><br>We take great pride in providing our community with high-quality, patient-centric care and health education. 
                         We are staffed by a team of highly skilled Pharmacist and Technicians and an able Administrative Staff who keep our pharmacy running efficiently. Contact us to find out more about our services.</h4>
         </div>
     </section>
     <section class="banner">
         <div class="container">
+            <div class="j2">
             <h1>Need help in Weight loss?</h1>
+            <h5>We bill Weight Loss Medications Such as Wegovy, Mounjaro and Zepbound <br>to help you in you weight loss journey</h5>
+        </div>
         </div>
 
     </section>
@@ -90,7 +93,7 @@
                 <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-right" data-aos-delay="100">
                     <div class="content">
                         <h3>Why us?</h3>
-                        <p>We accept all insuraces and 3rd party insurances and provide you high quality services. We also bill coupons on some medications </p>
+                        <p>We accept most of the insuraces and 3rd party insurances and provide you high quality services. We also accept coupons on some medications </p>
                         <div class="text-center"><a href="tel:7184563156" class="more_btn">Learn More</a>
                         </div>
                     </div>
@@ -106,7 +109,7 @@
                 <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-right" data-aos-delay="300">
                     <div class="content">
                         <h3>Need a Medicine Delivered?</h3>
-                        <p>We make sure that a patient receives every medication on the right time. We make sure that you medication is delivered to you anywhere in New York  for FREE. <br>T&C Applied.</p>
+                        <p>We make sure that a patient receives every medication on the right time. We make sure that you medication is delivered to you anywhere in New York for FREE. <br>T&C Applied.</p>
                         <div class="text-center"><a href="tel:7184563156" class="more_btn">Learn More</a>
                         </div>
                     </div>
