--- a/spanish.html
+++ b/spanish.html
@@ -72,8 +72,8 @@
         <div class="container text-center" data-aos="fade-in" data-aos-delay="200">
             <div class="content">
                     <h2>FARMACIA DE LA COMUNIDAD!</h2>
-                    <h4>Ralph Prescriptions Pharmacy es una de las farmacias mejor establecidas que tenemos en New York.. 
-                        Tenemos años de experiencia en el tratamiento de pacientes y, si bien es posible que hayamos crecido en tamaño, todavía brindamos el mismo servicio íntimo, personal y excelente que brindamos en aquel entonces.
+                    <h4>Ralph Prescriptions Pharmacy es una de las farmacias mejor establecidas que tenemos en New York. 
+                        Tenemos años de experiencia en el tratamiento de pacientes y, si bien es posible que hayamos crecido en tamaño, todavía brindamos el excelente servicio que brindamos en ese entonces.
                         <br><br>Estamos muy orgullosos de brindar a nuestra comunidad atención y educación sobre la salud de alta calidad y centradas en el paciente. 
                         Contamos con un equipo de farmacéuticos y técnicos altamente capacitados y un personal administrativo capacitado que mantienen nuestra farmacia funcionando de manera eficiente. Contáctenos para saber más sobre nuestros servicios.</h4>
         </div>
@@ -84,7 +84,7 @@
                 <div class="col-lg-4 d-flex align-items-stretch" data-aos="fade-right" data-aos-delay="100">
                     <div class="content">
                         <h3>Porque nosotros?</h3>
-                        <p>Aceptamos todos los seguros y seguros de terceros y le brindamos servicios de alta calidad. También facturamos cupones en algunos medicamentos.</p>
+                        <p>Aceptamos la mayoría de los seguros y seguros de terceros y le brindamos servicios de alta calidad. También aceptamos cupones para algunos medicamentos.</p>
                         <div class="text-center"><a href="tel:7184563156" class="more_btn">Learn More</a>
                         </div>
                     </div>
